base header is ready with css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlowLentes</title>
+    <script src="https://kit.fontawesome.com/f0d820c46d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Poppins:wght@400;800;900&display=swap" rel="stylesheet">
+    <title>Tienda Online</title>
 </head>
 
 <body>
-
+    <header class="main-header">
+        <div class="container-menu container-header">
+            <div class="cointaner-tittle">
+                <h1 class="main__tittle">glassesflow</h1>
+                <span class="fas fa-bars icon-menu" id="btnMenu"></span>
+            </div>
+            <nav class="main-nav" id="main-nav">
+                <ul class="main-menu">
+                    <li class="menu-item">
+                        <a href="" class="menu-link">home</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="" class="menu-link">about</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="" class="menu-link">features</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="" class="menu-link">shop</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="" class="menu-link">contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="container-tell container-header">
+            <p class="info-help">Need Help</p>
+            <p><i class="fas fa-phone"></i>Call 12345678099</p>
+        </div>
+        <div class="container-user container-header">
+            <div class="content-cart">
+                <i class="fas fa-user"></i>
+                <button class="btn-cart">My cart <i class="fas fa-cart-plus"></i></button>
+            </div>
+            <input type="search" class="input-search" placeholder="Buscar..">
+        </div>
+    </header>
+    <main>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
