design slider ready, style arrows next and before is ready

--- a/index.html
+++ b/index.html
@@ -53,7 +53,60 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="section-slider">
+            <div class="slider">
+                <div class="slider-item">
+                    <img src="./img/glasses/banners/banner1.jpg" alt="" class="slider-img">
+                    <div class="slider-overflow">
+                        <p class="title-banner">Men’s eyewear</p>
+                        <p class="description-banner">Cool summer sale 50% off</p>
+                        <a class="button-shop" href="#">Shop Now</a>
+                    </div>
+                </div>
+                <div class="slider-item">
+                    <img src="./img/glasses/banners/banner-mid.jpg" alt="" class="slider-img">
+                    <div class="slider-overflow">
+                        <p class="title-banner">Women’s eyewearr</p>
+                        <p class="description-banner">Want to Look Your Best?</p>
+                        <a class="button-shop" href="#">Shop Now</a>
+                    </div>
+                </div>
+                <div class="slider-item">
+                    <img src="./img/glasses/banners/flow.jpg" alt="" class="slider-img">
+                    <div class="slider-overflow">
+                        <p class="title-banner">Let them see you</p>
+                        <p class="description-banner">Become don juan</p>
+                        <a class="button-shop" href="#">Shop Now</a>
+                    </div>
+                </div>
+                <div class="slider-item">
+                    <img src="./img/glasses/banners/banner4.jpg" alt="" class="slider-img">
+                    <div class="slider-overflow">
+                        <p class="title-banner">Women’s eyewearr</p>
+                        <p class="description-banner">Want to Look Your Best?</p>
+                        <a class="button-shop" href="#">Shop Now</a>
+                    </div>
+                </div>
+                <div class="slider-item">
+                    <img src="./img/glasses/banners/sexylentes.jpg" alt="" class="slider-img">
+                    <div class="slider-overflow">
+                        <p class="title-banner">Be sensual</p>
+                        <p class="description-banner">Want to Look sexy?</p>
+                        <a class="button-shop" href="#">Shop Now</a>
+                    </div>
+                </div>
+                <div class="slider-item">
+                    <img src="./img/glasses/banners/donald.jpg" alt="" class="slider-img">
+                    <div class="slider-overflow">
+                        <p class="title-banner">Class glasses</p>
+                        <p class="description-banner">A bussines men</p>
+                        <a class="button-shop" href="#">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+            <span class="btn-slider btn-left"></span>
+            <span class="btn-slider btn-rigth"></span>
+        </section>
     </main>
     <footer></footer>
 </body>
