Full Slider DONE!

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <main>
         <section class="section-slider">
-            <div class="slider">
+            <div class="slider" id="slider">
                 <div class="slider-item">
                     <img src="./img/glasses/banners/banner1.jpg" alt="" class="slider-img">
                     <div class="slider-overflow">
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="slider-item">
-                    <img src="./img/glasses/banners/donald.jpg" alt="" class="slider-img">
+                    <img src="./img/glasses/banners/magic.jpg" alt="" class="slider-img">
                     <div class="slider-overflow">
                         <p class="title-banner">Class glasses</p>
                         <p class="description-banner">A bussines men</p>
@@ -104,11 +104,12 @@
                     </div>
                 </div>
             </div>
-            <span class="btn-slider btn-left"></span>
-            <span class="btn-slider btn-rigth"></span>
+            <span class="btn-slider btn-left" id="btn-left"></span>
+            <span class="btn-slider btn-rigth" id="btn-right"></span>
         </section>
     </main>
     <footer></footer>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
