Section glasses created, using css grid to organize part of products

--- a/index.html
+++ b/index.html
@@ -107,6 +107,69 @@
             <span class="btn-slider btn-left" id="btn-left"></span>
             <span class="btn-slider btn-rigth" id="btn-right"></span>
         </section>
+        <section class="section-glasses">
+            <p class="section-glasses-title">
+                New Arrivals for you
+            </p>
+            <section class="container-products">
+                <div class="product">
+                    <figure class="container-picture-glass">
+                        <img src="./img/glasses/d2.jpg" alt="glass">
+                    </figure>
+                    <div class="item-glass-info">
+                        <div class="glass-about">
+                            <p class="glass-name">Farenheit (Grey)</p>
+                            <p class="glass-price">$575.00</p>
+                        </div>
+                        <div class="cart-container">
+                            <i class="fas fa-cart-plus icon-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <figure class="container-picture-glass">
+                        <img src="./img/glasses/s2.jpg" alt="glass">
+                    </figure>
+                    <div class="item-glass-info">
+                        <div class="glass-about">
+                            <p class="glass-name">Opium (Grey)</p>
+                            <p class="glass-price">$325.00</p>
+                        </div>
+                        <div class="cart-container">
+                            <i class="fas fa-cart-plus icon-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <figure class="container-picture-glass">
+                        <img src="./img/glasses/s3.jpg" alt="glass">
+                    </figure>
+                    <div class="item-glass-info">
+                        <div class="glass-about">
+                            <p class="glass-name">Kenneth Cole</p>
+                            <p class="glass-price">$575.00</p>
+                        </div>
+                        <div class="cart-container">
+                            <i class="fas fa-cart-plus icon-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <figure class="container-picture-glass">
+                        <img src="./img/glasses/s4.jpg" alt="glass">
+                    </figure>
+                    <div class="item-glass-info">
+                        <div class="glass-about">
+                            <p class="glass-name">Farenheit Oval </p>
+                            <p class="glass-price">$375.00</p>
+                        </div>
+                        <div class="cart-container">
+                            <i class="fas fa-cart-plus icon-cart"></i>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
     </main>
     <footer></footer>
     <script src="./js/index.js"></script>
