--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f0d820c46d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/mobile.css"> -->
+    <link rel="stylesheet" media="(min-width: 320px)" href="./css/mobile.css" />
+    <link rel="stylesheet" media="(min-width: 580px)" href="./css/tablet.css" />
+    <link rel="stylesheet" media="(min-width: 1024px)" href="./css/desktop.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Poppins:wght@400;800;900&display=swap" rel="stylesheet">
@@ -125,6 +128,7 @@
                             <i class="fas fa-cart-plus icon-cart"></i>
                         </div>
                     </div>
+                    <span class="new-product product-sun">New</span>
                 </div>
                 <div class="product">
                     <figure class="container-picture-glass">
@@ -139,6 +143,7 @@
                             <i class="fas fa-cart-plus icon-cart"></i>
                         </div>
                     </div>
+                    <span class="new-product product-winter">New</span>
                 </div>
                 <div class="product">
                     <figure class="container-picture-glass">
@@ -153,6 +158,7 @@
                             <i class="fas fa-cart-plus icon-cart"></i>
                         </div>
                     </div>
+                    <span class="new-product product-winter">New</span>
                 </div>
                 <div class="product">
                     <figure class="container-picture-glass">
@@ -167,6 +173,67 @@
                             <i class="fas fa-cart-plus icon-cart"></i>
                         </div>
                     </div>
+                    <span class="new-product product-sun">New</span>
+                </div>
+                <div class="product">
+                    <figure class="container-picture-glass">
+                        <img src="./img/glasses/s4.jpg" alt="glass">
+                    </figure>
+                    <div class="item-glass-info">
+                        <div class="glass-about">
+                            <p class="glass-name">Farenheit Oval </p>
+                            <p class="glass-price">$375.00</p>
+                        </div>
+                        <div class="cart-container">
+                            <i class="fas fa-cart-plus icon-cart"></i>
+                        </div>
+                    </div>
+                    <span class="new-product product-sun">New</span>
+                </div>
+                <div class="product">
+                    <figure class="container-picture-glass">
+                        <img src="./img/glasses/s4.jpg" alt="glass">
+                    </figure>
+                    <div class="item-glass-info">
+                        <div class="glass-about">
+                            <p class="glass-name">Farenheit Oval </p>
+                            <p class="glass-price">$375.00</p>
+                        </div>
+                        <div class="cart-container">
+                            <i class="fas fa-cart-plus icon-cart"></i>
+                        </div>
+                    </div>
+                    <span class="new-product product-sun">New</span>
+                </div>
+                <div class="product">
+                    <figure class="container-picture-glass">
+                        <img src="./img/glasses/s4.jpg" alt="glass">
+                    </figure>
+                    <div class="item-glass-info">
+                        <div class="glass-about">
+                            <p class="glass-name">Farenheit Oval </p>
+                            <p class="glass-price">$375.00</p>
+                        </div>
+                        <div class="cart-container">
+                            <i class="fas fa-cart-plus icon-cart"></i>
+                        </div>
+                    </div>
+                    <span class="new-product product-sun">New</span>
+                </div>
+                <div class="product">
+                    <figure class="container-picture-glass">
+                        <img src="./img/glasses/s4.jpg" alt="glass">
+                    </figure>
+                    <div class="item-glass-info">
+                        <div class="glass-about">
+                            <p class="glass-name">Farenheit Oval </p>
+                            <p class="glass-price">$375.00</p>
+                        </div>
+                        <div class="cart-container">
+                            <i class="fas fa-cart-plus icon-cart"></i>
+                        </div>
+                    </div>
+                    <span class="new-product product-sun">New</span>
                 </div>
             </section>
         </section>
