add favicon in the tab

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f0d820c46d.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="./css/mobile.css"> -->
+    <link rel="icon" type="image/png" href="./icons/icon-glasses.png">
     <link rel="stylesheet" media="(min-width: 320px)" href="./css/mobile.css" />
     <link rel="stylesheet" media="(min-width: 580px)" href="./css/tablet.css" />
     <link rel="stylesheet" media="(min-width: 1024px)" href="./css/desktop.css" />
@@ -218,7 +219,7 @@
                             <i class="fas fa-cart-plus icon-cart"></i>
                         </div>
                     </div>
-                    <span class="new-product product-sun">New</span>
+                    <span class="new-product product-winter">New</span>
                 </div>
                 <div class="product">
                     <figure class="container-picture-glass">
